methods.basics.Methods.scala.error
Erreur de compilation :
Methods:19: error: not found: value deposeBiscuit
  deposeBiscuit()
  ^