methods.basics.Methods.scala.code
var nbPas:Int = 0
def goAndGet() {
  
  while(!estSurBiscuit()){
    
    avance()
    nbPas += 1
    
  }
  
  prendBiscuit()
  
  for(j <- 0 to (nbPas-1)){
    
    recule()
    
  }
  
  deposeBiscuit()
  
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}